samples/_failures_safe/1761211943_ae8239_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0fff051b.c: In function ‘main’:
./samples/SAFE/__tmp_0fff051b.c:177:11: error: expected ‘;’ at end of input
  177 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_0fff051b.c:177:5: error: expected declaration or statement at end of input
  177 |     printf
      |     ^~~~~~
